<resources>
    <string name="hello">Short Vibration</string>
    <string name="app_name">CQATest</string>
    <string name="str_ok">Turn On Vibrator</string>
    <string name="str_end">Turn Off Vibrator</string>
    <string name="vib_on">ON</string>
    <string name="long_vib">Long Vibration</string>
    <string name="pattern_vib">Vibrate as given pattern - SOS</string>
    <string name="vib_check">Check Vibrator exists on Device</string>
    <string name="tcmd_vibrator">Vibrator</string>
    <string name="rst_cycling">Buzz Test</string>
    <string name="earpiece_verify">Play Harvard speech pattern</string>
    <string name="audio_tone"> </string>
    <string name="bt_mac_text"> </string>
    <string name="light_text"> </string>
    <string name="flip_text"> </string>
    <string name="keytest_text"> </string>
    <string name="mag_txt_x"> </string>
    <string name="mmc_text"> </string>
    <string name="prox_text"> </string>
    <string name="cap_text"> </string>
    <string name="personalization_text">Personalization info:</string>
    <string name="wifi_txt_1">WiFi</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="tcmd_accel">Sensor/Accelerometer</string>
    <string name="tcmd_accel_secondary">Sensor/Accelerometer Secondary</string>
    <string name="ambient_temperature_1">Ambient Temperature in degrees Celsius</string>
    <string name="barometer_1">Barometeric Atmospheric pressure in hPa (millibar)</string>
    <string name="gyro_1">Gyroscope Angular Speeds (radians per second)</string>
    <string name="mag_1">Magnetometer in micro-Tesla</string>
    <string name="heartrate_1">Heart Rate</string>
    <string name="database_text"> </string>
    <string name="tcmd_ambient_temperature">Sensor/Ambient Temperature</string>
    <string name="tcmd_barometer">Sensor/Barometer</string>
    <string name="tcmd_gyro">Sensor/Gyroscope</string>
    <string name="tcmd_mag">Sensor/Magnetometer</string>
    <string name="tcmd_heartrate_sensor">Sensor/Heart Rate</string>
    <string name="tcmd_camera_viewfinder">Camera/External Viewfinder</string>
    <string name="tcmd_camera_viewfindertorchon">Camera/Viewfinder Torch On</string>
    <string name="tcmd_internal_camera_snapallresolutions">Camera/Internal Camera Snap All Resolutions</string>
    <string name="tcmd_internal_camera_strobe">Camera/Internal Camera Strobe Test</string>
    <string name="tcmd_external_camera_snapallresolutions">Camera/External Camera Snap All Resolutions</string>
    <string name="tcmd_touchscreen_MXT1386">Touch Screen/MXT1386</string>
    <string name="tcmd_touchscreen_MXT1386_short">Touch Screen/MXT1386 Short</string>
    <string name="tcmd_touchscreen_MXT224">Touch Screen/MXT224</string>
    <string name="tcmd_touchscreen_Config">Touch Screen/Config</string>
    <string name="tcmd_touchscreen_diagonal">Touch Screen/Diagonal</string>
    <string name="tcmd_touchscreen_touch_ft" translatable="false">Touch Screen/FOCALTECH</string>
    <string name="touch_focaltech_testresult" translatable="false">FocalTech testResult:</string>
    <string name="tcmd_display_testPatterns_blackWithWhiteBorder">Display/Display Test Patterns/Black with White Border</string>
    <string name="tcmd_display_testPatterns_blackWithWhiteBorderReverseOrientation">Display/Display Test Patterns/Black with White Border Reverse Orientation</string>
    <string name="tcmd_display_testPatterns_whiteWithBlackBorder">Display/Display Test Patterns/White with Black Border</string>
    <string name="tcmd_display_testPatterns_whiteWithBlackBorderReverseOrientation">Display/Display Test Patterns/White with Black Border Reverse Orientation</string>
    <string name="tcmd_display_testPatterns_xtalk">Display/Display Test Patterns/Xtalk</string>
    <string name="tcmd_display_testPatterns_black">Display/Display Test Patterns/Black</string>
    <string name="tcmd_display_testPatterns_blackReverseOrientation">Display/Display Test Patterns/Black Reverse Orientation</string>
    <string name="tcmd_display_testPatterns_drawable">Display/Display Test Patterns/Drawable</string>
    <string name="tcmd_display_testPatterns_genericColorFullScreenPattern">Display/Display Test Patterns/Generic Color Full Screen</string>
    <string name="tcmd_display_testPatterns_grayscale">Display/Display Test Patterns/Grayscale</string>
    <string name="tcmd_display_testPatterns_bright">Display/Display Test Patterns/Bright Color Bar</string>
    <string name="tcmd_display_testPatterns_bright_line_pattern">Display/Display Test Patterns/Bright Color Line</string>
    <string name="tcmd_display_testPatterns_medium">Display/Display Test Patterns/Medium Color Bar</string>
    <string name="tcmd_display_testPatterns_dark">Display/Display Test Patterns/Dark Color Bar</string>
    <string name="tcmd_display_testPatterns_focus">Display/Display Test Patterns/Focus</string>
    <string name="tcmd_display_testPatterns_macbeth">Display/Display Test Patterns/Macbeth</string>
    <string name="tcmd_display_testPatterns_redblocks">Display/Display Test Patterns/Redblocks</string>
    <string name="tcmd_display_testPatterns_grayblocks">Display/Display Test Patterns/Grayblocks</string>
    <string name="tcmd_display_testPatterns_greenblocks">Display/Display Test Patterns/Greenblocks</string>
    <string name="tcmd_display_testPatterns_blueblocks">Display/Display Test Patterns/Blueblocks</string>
    <string name="tcmd_display_testpattern_hdmininebars">Display/Display Test Patterns/HdmiNineBars</string>
    <string name="tcmd_display_testpattern_xtalkr">Display/Display Test Patterns/Xtalk Reference</string>
    <string name="tcmd_display_testpattern_xtalkiv">Display/Display Test Patterns/Xtalk Interfering Vertical</string>
    <string name="tcmd_display_testpattern_xtalkih">Display/Display Test Patterns/Xtalk Interfering Horizontal</string>
    <string name="tcmd_display_videoplayback">Display/Video Playback</string>
    <string name="tcmd_display_redlinecapture">Display/Redline Capture</string>
    <string name="proximity_1">Proximity</string>
    <string name="cap_touch">CAP_Touch</string>
    <string name="tcmd_proximity">Sensor/Proximity</string>
    <string name="tcmd_cap_touch">Sensor/Capsense</string>
    <string name="proximity_2">2nd Proximity</string>
    <string name="proximity_3" translatable="false">3rd Proximity</string>
    <string name="tcmd_proximity2nd">Sensor/Secondary Proximity</string>
    <string name="tcmd_proximity3rd" translatable="false">Sensor/Third Proximity</string>
    <string name="tcmd_camera_internalvierfinder">Camera/Internal Viewfinder</string>
    <string name="tcmd_light">Sensor/Front Light</string>
    <string name="tcmd_version">Version</string>
    <string name="tcmd_mmc">MMC Self Test</string>
    <string name="tcmd_simcard">SIM Card</string>
    <string name="audio_mediaplay_res">Play Media File - Moto.ogg</string>
    <string name="audio_tone_button">Play Audio Tone</string>
    <string name="tcmd_audio_palymediafile">Audio/Loudspeaker</string>
    <string name="tcmd_audio_playmediabackground">Audio/Play media background</string>
    <string name="tcmd_audio_playback">Audio/Record and Playback</string>
    <string name="tcmd_audio_micanalyze">Audio/Mic Analyze</string>
    <string name="tcmd_bt_macaddress">Bluetooth/Bluetooth Mac</string>
    <string name="tcmd_bt_scan">Bluetooth/Bluetooth Scan</string>
    <string name="version_bp">BP Version:</string>
    <string name="version_ap">AP Version:</string>
    <string name="version_CQATest_package">CQATest Package Version:</string>
    <string name="installedApps">Installed Applications:</string>
    <string name="audio_tonegen">AudioToneGenerator</string>
    <string name="tcmd_audio_tonegenerator">Audio/Audio Tone</string>
    <string name="tcmd_key_keytest">Key/Key Test</string>
    <string name="keytest">No Key is pressed</string>
    <string name="tcmd_audio_ear">Audio/Ear Speaker</string>
    <string name="tcmd_wifi_mac">WLAN/WiFi Mac</string>
    <string name="MsgRed">MsgLed-Red</string>
    <string name="MsgGreen">MsgLed-Green</string>
    <string name="MsgBlue">MsgLed-Blue</string>
    <string name="MsgWhite">MsgLed-White</string>
    <string name="test_sequence">Sequence Mode</string>
    <string name="test_menu">CQA Menu Mode</string>
    <string name="led_note"> NOTE:  "\n"- clear all Status Bar notifications "\n"- check box to select the color notification to display "\n"- turn off the display once the box is checked</string>
    <string name="connview_Server">Server</string>
    <string name="connview_Clear_Log">Clear Log</string>
    <string name="connview_Disconnect">Disconnect</string>
    <string name="connview_Connect">Connect</string>
    <string name="connview_Client">Client</string>
    <string name="connview_Send">Send</string>
    <string name="connview_text"> </string>
    <string name="connview_Connection_Log">Connection Log</string>
    <string name="battery_level_text">Battery Level: </string>
    <string name="battery_voltage_text">Battery Voltage: </string>
    <string name="battery_health_text">Battery Health: </string>
    <string name="battery_plugged_text">Battery Plugged : </string>
    <string name="battery_present_text">Battery Present: </string>
    <string name="battery_status_text">Battery Status: </string>
    <string name="battery_technology_text">Battery Technology: </string>
    <string name="battery_temperature_text">Battery Temperature: </string>
    <string name="headset_detect_info_text">Headset Detect Status: </string>
    <string name="headset_type_info_text">Headset Type: </string>
    <string name="headset_address_info_text">Headset Address: </string>
    <string name="headset_mic_info_text">Headset Has Microphone: </string>
    <string name="headset_key_info_text">Headset Key Press Status: </string>
    <string name="audio_source_prompt">Choose to do Mic Loopback</string>
    <string name="MsgSmartNotification">"MsgSmartNotification"</string>
    <string name="test_model_assembly">Model Assembly Mode</string>
    <string name="test_config_factory">Factory</string>
    <string name="test_config_alt">ALT</string>
    <string name="mic_loopback_freq_text"> </string>
    <string name="mic_loopback_amplitude_text"> </string>
    <string name="script_id">Script Id</string>
    <string name="options">Options</string>
    <string name="zero">0</string>
    <string name="data_log_options">Data log options</string>
    <string name="unit_id">Unit Id</string>
    <string name="main_button">Auto Cycle</string>
    <string name="mini_button">Mini Cycle</string>
    <string name="bringup_button">Bringup Auto Cycle</string>
    <string name="bringup_verify_button">Bringup Mini Cycle</string>
    <string name="online_button">Set Online/DMSS Mode</string>
    <string name="pref_title_status">Status</string>
    <string name="pref_title_display_turn_on_off">Display Turn On/Off</string>
    <string name="pref_value_none">No Status</string>
    <string name="pref_title_show_test_pattern">Show Test Pattern</string>
    <string name="pref_title_display_output" translatable="false">Select Display Output</string>
    <string name="functioncolorpattern1"></string>
    <string name="functioncolorpattern2"></string>
    <string name="functioncolorpattern3"></string>
    <string name="functioncolorpattern4"></string>
    <string name="functioncolorpattern5"></string>
    <string name="functioncolorpattern6"></string>
    <string name="functioncolorpattern7"></string>
    <string name="functioncolorpattern8"></string>
    <string name="functioncolorpattern9"></string>
    <string name="functioncolorpattern10"></string>
    <string name="functioncolorpattern11"></string>
    <string name="functioncolorpattern12"></string>
    <string name="functioncolorpattern13"></string>
    <string name="functioncolorpattern14"></string>
    <string name="functioncolorpattern15"></string>
</resources>