<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:id="@+id/FunctionColorPattern1"
		android:text="@string/functioncolorpattern1"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern2"
		android:text="@string/functioncolorpattern2"
		android:layout_toRightOf="@+id/FunctionColorPattern1"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern3"
		android:text="@string/functioncolorpattern3"
		android:layout_toRightOf="@+id/FunctionColorPattern2"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />

	<TextView android:id="@+id/FunctionColorPattern4"
		android:text="@string/functioncolorpattern4"
		android:layout_below="@+id/FunctionColorPattern1"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern5"
		android:text="@string/functioncolorpattern5"
		android:layout_below="@+id/FunctionColorPattern1"
		android:layout_toRightOf="@+id/FunctionColorPattern4"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern6"
		android:text="@string/functioncolorpattern6"
		android:layout_below="@+id/FunctionColorPattern1"
		android:layout_toRightOf="@+id/FunctionColorPattern5"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern7"
		android:text="@string/functioncolorpattern7"
		android:layout_below="@+id/FunctionColorPattern4"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern8"
		android:text="@string/functioncolorpattern8"
		android:layout_below="@+id/FunctionColorPattern4"
		android:layout_toRightOf="@+id/FunctionColorPattern7"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern9"
		android:text="@string/functioncolorpattern9"
		android:layout_below="@+id/FunctionColorPattern4"
		android:layout_toRightOf="@+id/FunctionColorPattern8"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern10"
		android:text="@string/functioncolorpattern10"
		android:layout_below="@+id/FunctionColorPattern7"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern11"
		android:text="@string/functioncolorpattern11"
		android:layout_below="@+id/FunctionColorPattern7"
		android:layout_toRightOf="@+id/FunctionColorPattern10"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern12"
		android:text="@string/functioncolorpattern12"
		android:layout_below="@+id/FunctionColorPattern7"
		android:layout_toRightOf="@+id/FunctionColorPattern11"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern13"
		android:text="@string/functioncolorpattern13"
		android:layout_below="@+id/FunctionColorPattern10"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern14"
		android:text="@string/functioncolorpattern14"
		android:layout_below="@+id/FunctionColorPattern10"
		android:layout_toRightOf="@+id/FunctionColorPattern13"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />
	<TextView android:id="@+id/FunctionColorPattern15"
		android:text="@string/functioncolorpattern15"
		android:layout_below="@+id/FunctionColorPattern10"
		android:layout_toRightOf="@+id/FunctionColorPattern14"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content" />

</RelativeLayout>
