<?xml version="1.0" encoding="utf-8"?>
<!-- Outside container for entire view -->
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<!-- Container for Server/Client area -->
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="160dp">
		<!-- Container for Server -->
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="80dp"
			android:background="#353535">
			<TextView 
				android:text="@string/connview_Server" 
				android:textSize="10pt"
				android:textColor="#0000FF"
				android:orientation="vertical" 
				android:layout_width="wrap_content"
				android:layout_height="fill_parent" 
				android:layout_weight="1">
			</TextView>
            <Button 
       			android:id="@+id/clear_log_button"
				android:textColor="#FF000000"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:text="@string/connview_Clear_Log">
       		</Button>
            <Button 
       			android:id="@+id/disconnect_button"
				android:textColor="#FF000000"
       			android:layout_width="wrap_content"
       			android:layout_height="wrap_content"
       			android:text="@string/connview_Disconnect">
       		</Button>
			<Button 
				android:id="@+id/connect_button"
				android:textColor="#FF000000"
				android:layout_width="wrap_content"
            	android:layout_height="wrap_content"				
            	android:text="@string/connview_Connect">
            </Button>
       	</LinearLayout>
       	<!-- Container for Client Area -->
		<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="80dp"
			android:background="#454545">
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent">
				<TextView 
					android:text="@string/connview_Client" 
					android:textColor="#FF0000"
					android:textSize="10pt"
					android:orientation="vertical" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" >
				</TextView>
				<Button 
					android:id="@+id/send_button"
					android:textColor="#FF000000"
					android:layout_width="wrap_content"
            		android:layout_height="fill_parent"				
            		android:text="@string/connview_Send">
            	</Button>
            </LinearLayout>	
			<EditText
				android:id="@+id/input_edittext"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent" 
				android:text="@string/connview_text"
				android:singleLine="true"
				android:cursorVisible="false">
			</EditText>
       </LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<TextView 
			android:text="@string/connview_Connection_Log"
			android:textSize="10pt"
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">	
		</TextView>
		<TextView android:id="@+id/ConnectionLog"
			android:background="@drawable/rounded_edges"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:clickable="true"
			android:hint="No Data"
			android:scrollbars="vertical"
			android:scrollbarStyle="outsideOverlay"
			android:scrollbarAlwaysDrawVerticalTrack="true"
			android:scrollbarDefaultDelayBeforeFade="5000"
			>
		</TextView>
	</LinearLayout>
</LinearLayout>
