<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main_test_layout"
    android:weightSum="3.5">

    <Button
        android:id="@+id/menumode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_menu"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/sequencemode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_sequence"
        android:layout_weight="1">
    </Button>

    <Button
        android:id="@+id/modelassemblymode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_model_assembly"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/config_factory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:layout_gravity="left|center_vertical"
            android:text="@string/test_config_factory" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_gravity="left|center_vertical">

            <RadioButton
                android:id="@+id/config_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_config_alt"
                android:textSize="13sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
