<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:keepScreenOn="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dip">
                <TextView
                    android:id="@+id/tv_script_id"
                    android:text="@string/script_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/script_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/scripts_array"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dip">
                <TextView
                    android:id="@+id/tv_options"
                    android:text="@string/options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dip">
                <TextView
                    android:id="@+id/tv_data_log_options"
                    android:text="@string/data_log_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Spinner
                    android:id="@+id/data_log_options"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="1dip">
               <TextView
                    android:id="@+id/tv_unit_id"
                    android:text="@string/unit_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/unit_id"
                    android:layout_width="50dip"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
		    android:text="@string/zero"
                    android:inputType="number"/>
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/start_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:padding="10sp"
            android:layout_margin="5dip"/>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="200dip"
            android:layout_margin="5dip"/>

    </LinearLayout>

</ScrollView>
